Fix orders overflow

--- a/src/pages/Chef/Chef.module.css
+++ b/src/pages/Chef/Chef.module.css
@@ -61,5 +61,6 @@
   .chef-orders {
     display: block;
     margin: 35px 5px;
+    overflow: auto;
   }
 }
